--- a/styles/style.css
+++ b/styles/style.css
@@ -9,11 +9,13 @@ html {
 }
 
 .page {
+  display: flex;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -35,4 +37,265 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content {
+  margin: 0 30px;
+  inline-size: 100%;
+  height: 534px;
+  display: flex;
+  gap: 30px;
+  align-items: flex-end;
+}
+
+.result {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  width: 710px;
+}
+
+.result__video-container {
+  width: 100%;
+  position: relative;
+}
+
+.result__video {
+  width: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  justify-content: flex-start;
+}
+
+.search-form__fieldset {
+  display: flex;
+  flex-direction: column;
+  border: none;
+}
+
+.search-form__fieldset-title {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 21.6px;
+  text-align: left;
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 5px;
+  width: fit-content;
+}
+
+.search-form__label:hover {
+  text-decoration: underline 1px white;
+  text-underline-offset: 5px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline-offset: 1px;
+  outline: 1px solid white;
+}
+
+.search-form__textfield {
+  font-size: inherit;
+  font-family: inherit;
+  font-weight: inherit;
+  background-color: transparent;
+  inline-size: 225px;
+  border: none;
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
+  background-color: transparent;
+  padding: 2px 0;
+  outline: none;
+  outline-offset: 1px;
+  color: white;
+}
+
+.search-form__textfield::placeholder {
+  color: white;
+}
+
+.search-form__textfield:active {
+  border: 1px solid white;
+  outline: none;
+}
+
+.search-form__textfield:focus:not(:active) {
+  outline: 1px solid white;
+}
+
+.search-form__pseudo-checkbox {
+  border: 1px solid white;
+  width: 19px;
+  height: 19px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  width: 15px;
+  height: 15px;
+  background-color: white;
+  content: "";
+  display: block;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+  appearance: none;
+}
+
+.button {
+  width: 100%;
+  border: 1px solid white;
+  background-color: transparent;
+  cursor: pointer;
+  color: white;
+  text-align: center;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  padding: 6px 0;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  text-decoration: underline 1px white;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid white;
+  outline-offset: 1px;
+}
+
+.content__list {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  block-size: 300px;
+  gap: 30px;
+  position: relative;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 34px;
+}
+
+.content__details {
+  width: 400px;
+  height: 100%;
+}
+
+.title {
+  color: #fff;
+  font-weight: 700;
+  font-size: 75px;
+  text-transform: uppercase;
+  padding-bottom: 26px;
+  font-family: Oswald;
+  line-height: 70px;
+  text-align: left;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__card-link {
+  text-decoration: none;
+  display: block;
+}
+
+.content__video-card-title {
+  font-weight: 700;
+  font-size: 30px;
+  padding-bottom: 6px;
+  color: white;
+  font-family: Oswald, sans-serif;
+  line-height: 1;
+  text-transform: uppercase;
+  hyphens: auto;
+  line-height: 30px;
+  text-align: left;
+}
+
+.content__video-card-description {
+  color: white;
+  font-weight: 400;
+  line-height: 16.2px;
+  text-align: left;
+}
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+  width: 194px;
+  height: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  width: 200px;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+}
+
+.content__card-link:hover {
+  text-decoration: underline 1px #fff;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  background-color: #545050;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid white;
+}
+
+.more-button-template {
+  width: 100%;
 }
