--- a/styles/style.css
+++ b/styles/style.css
@@ -67,12 +67,13 @@ ol {
 
 .result__video-container {
   width: 100%;
+  height: 386px;
   position: relative;
+  align-content: flex-end;
 }
 
 .result__video {
   width: 100%;
-  height: 386px;
   object-fit: cover;
   object-position: center;
 }
