--- a/styles/style.css
+++ b/styles/style.css
@@ -61,8 +61,8 @@ ol {
 .result {
   display: flex;
   flex-direction: column;
-  gap: 16px;
   width: 710px;
+  gap: 16px;
 }
 
 .result__video-container {
@@ -74,6 +74,7 @@ ol {
 
 .result__video {
   width: 100%;
+  height: 386px;
   object-fit: cover;
   object-position: center;
 }
@@ -81,6 +82,8 @@ ol {
 .search-form {
   width: 100%;
   display: flex;
+  box-sizing: content-box;
+  height: 54px;
   align-items: center;
   gap: 40px;
   justify-content: flex-start;
@@ -95,8 +98,6 @@ ol {
 .search-form__fieldset-title {
   font-weight: 400;
   font-size: 18px;
-  line-height: 21.6px;
-  text-align: left;
   padding-bottom: 5px;
 }
 
@@ -105,17 +106,33 @@ ol {
   align-items: center;
   cursor: pointer;
   gap: 5px;
+  outline: none;
   width: fit-content;
+  outline-offset: 1px;
 }
 
-.search-form__label:hover {
-  text-decoration: underline 1px white;
-  text-underline-offset: 5px;
+.search-form__label .search-form__textfield {
+  border: 1px solid transparent;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+}
+
+.search-form__label:active .search-form__textfield {
+  border: 1px solid white;
 }
 
 .search-form__label:has(:focus-visible) {
-  outline-offset: 1px;
   outline: 1px solid white;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
+  text-decoration-thickness: 0.5px;
+  text-underline-offset: 2px;
+}
+
+.search-form__label:active {
+  outline: none;
 }
 
 .search-form__textfield {
@@ -124,30 +141,16 @@ ol {
   font-weight: inherit;
   background-color: transparent;
   inline-size: 225px;
-  border: none;
-  border-bottom: 1px solid white;
-  border-top: 1px solid white;
-  border-left: 1px solid transparent;
-  border-right: 1px solid transparent;
   background-color: transparent;
   padding: 2px 0;
   outline: none;
-  outline-offset: 1px;
+  border: none;
   color: white;
 }
 
 .search-form__textfield::placeholder {
   color: white;
   opacity: 70%;
-}
-
-.search-form__textfield:active {
-  border: 1px solid white;
-  outline: none;
-}
-
-.search-form__textfield:focus:not(:active) {
-  outline: 1px solid white;
 }
 
 .search-form__pseudo-checkbox {
@@ -179,11 +182,11 @@ ol {
   background-color: transparent;
   cursor: pointer;
   color: white;
-  text-align: center;
   font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
   padding: 6px 0;
+  text-underline-offset: 2px;
 }
 
 .search-form__submit-button {
@@ -196,6 +199,7 @@ ol {
 
 .button:hover {
   text-decoration: underline 1px white;
+  background-color: #545050;
 }
 
 .button:focus {
@@ -242,6 +246,7 @@ ol {
 .content__card-link {
   text-decoration: none;
   display: block;
+  text-underline-offset: 2px;
 }
 
 .content__video-card-title {
@@ -250,7 +255,6 @@ ol {
   padding-bottom: 6px;
   color: white;
   font-family: Oswald, sans-serif;
-  line-height: 1;
   text-transform: uppercase;
   hyphens: auto;
   line-height: 30px;
@@ -263,9 +267,14 @@ ol {
   line-height: 16.2px;
   text-align: left;
 }
+
 .content__video-card {
   display: flex;
   justify-content: space-between;
+}
+
+.content__video-card:hover {
+  background-color: #545050;
 }
 
 .content__video-card-thumbnail {
@@ -277,6 +286,7 @@ ol {
 
 .content__video-card-description-container {
   width: 200px;
+  line-height: 30px;
 }
 
 .content__card-link {
