--- a/styles/style.css
+++ b/styles/style.css
@@ -65,13 +65,6 @@ ol {
   gap: 16px;
 }
 
-.result__video-container {
-  width: 100%;
-  height: 386px;
-  position: relative;
-  align-content: flex-end;
-}
-
 .result__video {
   width: 100%;
   height: 386px;
@@ -79,14 +72,19 @@ ol {
   object-position: center;
 }
 
+.result__video-container {
+  width: 100%;
+  height: 386px;
+  position: relative;
+  align-content: flex-end;
+}
+
 .search-form {
   width: 100%;
   display: flex;
   box-sizing: content-box;
   height: 54px;
-  align-items: center;
   gap: 40px;
-  justify-content: flex-start;
 }
 
 .search-form__fieldset {
@@ -113,8 +111,7 @@ ol {
 
 .search-form__label .search-form__textfield {
   border: 1px solid transparent;
-  border-top: 1px solid white;
-  border-bottom: 1px solid white;
+  border-block: 1px solid white;
 }
 
 .search-form__label:active .search-form__textfield {
@@ -136,12 +133,9 @@ ol {
 }
 
 .search-form__textfield {
-  font-size: inherit;
-  font-family: inherit;
-  font-weight: inherit;
+  font: inherit;
   background-color: transparent;
   inline-size: 225px;
-  background-color: transparent;
   padding: 2px 0;
   outline: none;
   border: none;
@@ -149,8 +143,7 @@ ol {
 }
 
 .search-form__textfield::placeholder {
-  color: white;
-  opacity: 70%;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .search-form__pseudo-checkbox {
@@ -163,17 +156,20 @@ ol {
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
   width: 15px;
   height: 15px;
   background-color: white;
-  content: "";
-  display: block;
 }
 
 .search-form__checkbox-list {
   display: flex;
   gap: 15px;
-  appearance: none;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
 }
 
 .button {
@@ -187,10 +183,6 @@ ol {
   font-size: 18px;
   padding: 6px 0;
   text-underline-offset: 2px;
-}
-
-.search-form__submit-button {
-  align-self: flex-end;
 }
 
 .button:active {
@@ -211,26 +203,27 @@ ol {
   outline-offset: 1px;
 }
 
-.content__list {
-  overflow-y: scroll;
-  scrollbar-width: none;
-  block-size: 300px;
-  gap: 30px;
-  position: relative;
-}
-
-.content__list-item:not(:last-child) {
-  margin-bottom: 34px;
-}
-
 .content__details {
   width: 400px;
   height: 100%;
 }
 
+.content__list {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  block-size: 300px;
+  display: flex;
+  flex-direction: column;
+  gap: 34px;
+  position: relative;
+}
+
+.content__list-item {
+  margin: 2px;
+}
+
 .title {
-  color: #fff;
-  font-weight: 700;
+  color: white;
   font-size: 75px;
   text-transform: uppercase;
   padding-bottom: 26px;
@@ -242,38 +235,27 @@ ol {
   color: #545050;
 }
 
-.content__card-link {
-  text-decoration: none;
-  display: block;
-  text-underline-offset: 2px;
-}
-
-.content__video-card-title {
-  font-weight: 700;
-  font-size: 30px;
-  padding-bottom: 6px;
-  color: white;
-  font-family: Oswald, sans-serif;
-  text-transform: uppercase;
-  hyphens: auto;
-  line-height: 30px;
-  text-align: left;
-}
-
-.content__video-card-description {
-  color: white;
-  font-weight: 400;
-  line-height: 16.2px;
-  text-align: left;
-}
-
 .content__video-card {
   display: flex;
   justify-content: space-between;
 }
 
-.content__video-card:hover {
-  background-color: #545050;
+.content__video-card-title {
+  font-size: 30px;
+  padding-bottom: 6px;
+  color: white;
+  font-family: Oswald, sans-serif;
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  color: white;
+  line-height: 16.2px;
+}
+
+.content__video-card-description-container {
+  width: 200px;
+  line-height: 30px;
 }
 
 .content__video-card-thumbnail {
@@ -283,14 +265,10 @@ ol {
   object-position: center;
 }
 
-.content__video-card-description-container {
-  width: 200px;
-  line-height: 30px;
-}
-
 .content__card-link {
   display: block;
   text-decoration: none;
+  text-underline-offset: 2px;
 }
 
 .content__card-link:hover {
@@ -298,10 +276,6 @@ ol {
 }
 
 .content__card-link:active {
-  background-color: #545050;
-}
-
-.content__card-link:focus {
   background-color: #545050;
 }
 
