--- a/styles/style.css
+++ b/styles/style.css
@@ -71,7 +71,7 @@ ol {
 }
 
 .result__video-container {
-  width: 100%;
+  width: 711px;
   height: 386px;
   position: relative;
   align-content: flex-end;
